<resources>
    <string name="app_name">Exercise_13</string>
    <string name="select">Select Your Meal Plan</string>
    <string name="price">Price</string>
    <string name="meal">Meal</string>
    <string name="quantity">Quantity </string>
    <string name="tip">Tip </string>
    <string name="totalPrice">Total Price</string>
    <string name="confirm">Confirm your order</string>
    <string name="order">Order</string>
    <string name="twenty">20%</string>
    <string name="ten">10%</string>
    <string name="fifteen">15%</string>
</resources>